# clipboard-cleaner

./: README.md  README.zh-CN.md  cleaner.py  clipboard.py  model.py  pyproject.toml  requirements.txt  run.py  setup.py  tui.py
clipboard_cleaner/: __init__.py  cli.py  state.py
clipboard_cleaner/cleaner/: __init__.py  pipeline.py
clipboard_cleaner/clipboard/: __init__.py  monitor.py
clipboard_cleaner/tui/: __init__.py  app.py  rendering.py
docs/: CHANGELOG.md  CLEANING_RULES.md  FIX_SUMMARY_2026-05-05.md  REVIEW_FIX_REPORT.md  TECHNICAL_DESIGN.md
tests/: test_cleaner.py  test_golden_fixtures.py  test_model.py  test_tui.py
tests/fixtures/: chinese_wrap_expected.txt  chinese_wrap_input.txt  claude_code_block_expected.txt  claude_code_block_input.txt  claude_list_expected.txt  claude_list_input.txt  claude_paragraph_expected.txt  claude_paragraph_input.txt  english_wrap_expected.txt  english_wrap_input.txt  frontmatter_false_positive_input.txt  quote_bar_expected.txt  quote_bar_input.txt  wrapped_box_table_expected.txt  wrapped_box_table_input.txt  wrapped_box_table_multicol_expected.txt  wrapped_box_table_multicol_input.txt
